test/Fail/Issue8454.agda

import Issue8454.B
